--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@ layout: default
       <h1><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></h1>
   
       <div class="date">
-        {{ page.date | date: "%B %e, %Y" }}
+        {{ post.date | date: "%B %e, %Y" }}
         <br/>
-        {% if page.tags.size > 0 %}
-          Tag{% if page.tags.size > 1 %}s{% endif %}:
-          {{ page.tags | sort | join: ", " }}
+        {% if post.tags.size > 0 %}
+          Tag{% if post.tags.size > 1 %}s{% endif %}:
+          {{ post.tags | sort | join: ", " }}
         {% endif %}
       </div>
       
